--- a/service/templates/demo.html
+++ b/service/templates/demo.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
 
+    <link href='https://fonts.googleapis.com/css?family=Play:400,700|Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
+
     <!-- jquery ui -->
     <link rel="stylesheet" href="/static/vendor/edges/vendor/jquery-ui-1.11.1/jquery-ui.css">
 
@@ -19,6 +21,8 @@
     <link rel="stylesheet" href="/static/vendor/edges/css/bs3.edges.css">
     <link rel="stylesheet" href="/static/vendor/edges/css/google.edges.css">
 
+    <link rel="stylesheet" href="/static/css/service.css">
+
     <!-- demo css -->
     <link rel="stylesheet" href="/static/css/election/election.css">
 
@@ -26,12 +30,60 @@
 </head>
 <body>
 
-<div class="container"><div class="content">
-    <div style="margin-top: 30px">
-        <div id="election"></div>
+<div id="topstrap">
+    <div class="container">
+        <div class="content">
+            <h1>EDGES</h1>
+            <p class="tagline">Interactive publication and visualisation for all your data</p>
+        </div>
     </div>
+</div>
 
-</div></div>
+<div id="intro">
+    <div class="container">
+        <div class="content">
+            <p>Edges provides you with a way to publish your organisation's data so your users can interact with it in
+            real-time, explore angles, and learn the answers to questions they didn't even know they had.</p>
+
+            <p>Whether you are a small company working with specialised datasets for select clientele, a research group with cutting-edge
+            data to disseminate, or a large organisation with large data to present to the public or your clients, Edges can
+            provide a way to make it understood.</p>
+        </div>
+    </div>
+</div>
+
+<div id="examples">
+    <div class="container">
+        <div class="content">
+            <h2>EXAMPLES</h2>
+            <p>Check out the contrived demonstrations below, to see what Edges might be able to do for you.</p>
+        </div>
+    </div>
+</div>
+
+<div class="demo">
+<div class="container">
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
+                <p class="demo-intro">Try exploring the vote-share for policical parties in the UK's 2015 government elections.  Choose as many
+                constituencies as you like from the menu, and see the break-down of the votes for each party across all
+                your selections.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="election"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="pull-right">Source: <a href="http://www.electoralcommission.org.uk/our-work/our-research/electoral-data">Electoral Commission</a></div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 
 <!-- javascript constants to use -->
 <script type="text/javascript">
