route queries to the back end through the query endpoint

--- a/service/templates/demo.html
+++ b/service/templates/demo.html
@@ -87,7 +87,9 @@
 
 <!-- javascript constants to use -->
 <script type="text/javascript">
-    var search_base_url = "http://localhost:9200/edges/";
+    // var search_base_url = "http://localhost:9200/edges/";
+    // var search_base_url = "http://edges.ooz.cottagelabs.com/query/"
+    var search_base_url = "http://localhost:5029/query/"
 </script>
 
 <!-- jquery -->
